--- a/frontend/shared/scss/layout/st-view.scss
+++ b/frontend/shared/scss/layout/st-view.scss
@@ -160,3 +160,12 @@
         padding: 0;
     }
 }
+
+/*
+// Improve animation performance
+.navigation-controller {
+    > * > * {
+        will-change: scroll-position;
+    }
+}
+*/
